kubernetes/apps/cosign-system/policy-controller/templates/ciliumnetworkpolicy.yaml
---
# yaml-language-server: $schema=https://datreeio.github.io/CRDs-catalog/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: policy-controller
specs:
  - endpointSelector:
      matchLabels:
        app.kubernetes.io/name: policy-controller
    egress:
      - toPorts:
          - ports:
              - port: "53"
                protocol: ANY
            rules:
              dns:
                - matchPattern: "*"
      - toFQDNs:
          - matchName: "tuf-repo-cdn.sigstore.dev"
